--- a/public/lab_3/style.css
+++ b/public/lab_3/style.css
@@ -14,7 +14,7 @@ body {
   width: 70%;
   min-width: 800px;
   margin: 0 auto;
-  background-color: #6091C3;
+  background-color: #6091DC;
 }
 
 /* || typography */
@@ -74,7 +74,7 @@ h1 {
   text-transform: uppercase;
 }
 
-header img {
+.header img {
   display: block;
   height: 60px;
   padding-top: 20.15px;
