--- a/public/asst-1/style.css
+++ b/public/asst-1/style.css
@@ -21,10 +21,12 @@ html, body {
     flex-flow: row wrap;
     text-align: left;
     vertical-align: center;
+    align-items: center;
     justify-content: space-evenly;
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 15px;
+    padding: 15px;
   }
   .header img{
     display: inline;
