--- a/public/lab_7/styles.css
+++ b/public/lab_7/styles.css
@@ -11,7 +11,9 @@ body {
 .container {
   min-height: 100%;
 }
-
+.h1 {
+  color: rgba(10, 28, 190, 0.842);
+}
 .header {
   color: #fff;
   display: flex;
@@ -46,8 +48,8 @@ body {
 }
 
 .flex-outer button {
-  background-color: darkolivegreen;
-  color: white;
+  background-color: rgb(209, 118, 0);
+  color: rgb(0, 0, 0);
   padding: 6px 12px;
   border: none;
   text-transform: uppercase;
