--- a/public/asst-1/style.css
+++ b/public/asst-1/style.css
@@ -56,6 +56,9 @@ html, body {
 .wrapper p{
   background-color: rgb(255, 254, 221);
 }
+.us p{
+  flex:0 1 auto;
+}
 .wrapper img{
   
   max-width: 100%;
@@ -70,10 +73,18 @@ html, body {
   max-width: 66%;
 }
 @media only screen and (max-width: 1000px) {
+  .wrapper {
+    justify-content: center;
+  }
   .wrapper .us{
     margin-bottom: 15px;
-    text-align:center;
+    text-align: center;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
+    flex: 1 0 auto;
+    display: flex;
+    flex-wrap: wrap;
   }
+  
   }
